--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,6 +24,15 @@ ul, li {
 	margin: 0; 
 }
 
+.sticky {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  border-top: 0;
+}
+
 .menu{
 	margin-top: 10px;
 }
@@ -33,8 +42,14 @@ ul, li {
 	font-size: 14px;
 }
 
-.menu_item a {
+.menu_item a{
 	color: #2c465a;
+	padding: 10px;
+}
+
+.active {
+	background-color: #fea100;
+	border-radius: 3px;
 }
 
 .logo {
@@ -54,20 +69,25 @@ ul, li {
 	width: 200px;
 	border: 0;
 	font-weight: 700;
-	margin-top: -5px;
+	margin-top: -3px;
 	text-align: center;
 }
 
-.book_icon {
-	background: url('../img/order.png');
-	width: 21px;
+.grn_icon {
+	background: url('../img/grn.png');
+	width: 17px;
 	height: 17px;
 	display: block;
 	margin-right: 13px;
 }
 
 .main_header {
-	padding: 24px 0;
+	padding: 14px 0;
+	position: fixed;
+	z-index: 5;
+	width: 100%;
+	background-color: #fff;
+	border-bottom: 1px solid #2c465a;
 }
 
 .offer {
@@ -76,12 +96,13 @@ ul, li {
 }
 
 .title {
-	padding: 160px 0 211px;
+	padding: 160px 0 270px;
 }
 
 .title_heading{
 	font-size: 56px;
 	color: #FFF;
+	-webkit-text-stroke: .02em rgba(0,0,0,1);
 }
 
 .title_desc {
@@ -124,8 +145,6 @@ ul, li {
 	width: 148px;
 	margin-top: 48px;
 }
-
-
 
 .cta:hover {
 	text-decoration: none;
@@ -210,7 +229,8 @@ ul, li {
 }
 
 .price_button {
-	margin: -50px 0 60px;
+	margin: -50px 10px 60px;
+	z-index: 3;
 }
 
 .footer {
@@ -289,3 +309,8 @@ ul, li {
 .show {
 	display: block !important;
 }
+
+.hide {
+	display: none;
+}
+
